--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="js/moveSubtly.js"></script>
   </head>
   <body>
+  
+  <script>
+  	$(function() {
+		$("#image1").moveSubtly();
+	});
+  </script>
+  
     <div class="wrapper">
       <header>
         <h1>Move Subtly</h1>
@@ -32,10 +40,7 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<img id="image1" src="images/smythesCoverPhoto.jpg" />
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
