fixed the path to moveSubtly.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script src="js/moveSubtly.js"></script>
+    <script src="javascripts/moveSubtly.js"></script>
   </head>
   <body>
   
