--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
     <script src="javascripts/moveSubtly.js"></script>
   </head>
   <body>
