hardcoded an image width just for demo purposes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<img id="image1" src="images/smythesCoverPhoto.jpg" />
+<img id="image1" src="images/smythesCoverPhoto.jpg" style="width:500px;" />
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
