--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
       </header>
       <section>
       
-<h3>Default Settings</h3>
-
-<code>$('#image1').moveSubtly();</code>
-
-<img id="image1" src="images/smythesCoverPhoto.jpg" style="width:500px;" />
+		<h3>Default Settings</h3>
+        <p><img id="image1" src="images/smythesCoverPhoto.jpg" style="width:500px;" /></p>
+        <code>$("#image1").moveSubtly();</code>
+        
+        <h3>Custom Settings</h3>
+        <p><img id="image2" src="images/smythesCoverPhoto.jpg" style="width:500px;" /></p>
+        <code>$("#image2").moveSubtly({moveTime:1000,stillTime:6000,lockSide:"bottom"});</code>
 
       </section>
       <footer>
