forgot to add to real jquery

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script>
   	$(function() {
 		$("#image1").moveSubtly();
+		$("#image2").moveSubtly({moveTime:1000,stillTime:6000,lockSide:"bottom"});
 	});
   </script>
   
